* [PopupMenu] Fix overflow of menu list element

--- a/packages/jezvejs/src/Components/PopupMenu/style.scss
+++ b/packages/jezvejs/src/Components/PopupMenu/style.scss
@@ -49,6 +49,7 @@
   display: flex;
   flex-flow: column nowrap;
   position: absolute;
+  overflow: hidden;
   border-width: var(--popupmenu-border-width);
   border-style: solid;
   border-color: var(--popupmenu-border-color);
